--- a/proyecto/gestionfp/pom.xml
+++ b/proyecto/gestionfp/pom.xml
@@ -46,7 +46,22 @@
             <artifactId>swagger-annotations-jakarta</artifactId>
             <version>2.2.7</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-models-jakarta</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
