--- a/proyecto/gestionfp/src/main/resources/application.properties
+++ b/proyecto/gestionfp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://mysql.galsoftpre.es:3306/aulanosa
-spring.datasource.username=alumno
+spring.datasource.username=alumno2
 spring.datasource.password=Aulanosa2023_
 spring.datasource.driverClass=com.mysql.cj.jdbc.Driver
 
